# signalstack

./: .gitignore  DECISIONS.md  DOMAIN_MODELS_ANALYSIS.md  README.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: __iniy__.py
backend/app/api/: dependencies.py
backend/app/api/v1/: auth.py  health.py  research.py  router.py
backend/app/clients/: anthropic_client.py  chroma_client.py  market_data_client.py  news_api_client.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: auth.py  error_handler.py  request_id.py  tenant.py
backend/app/models/db/: __init__.py  audit.py  base.py  cache.py  member.py  organization.py  report.py  source.py  user.py  watchlist.py
backend/app/models/db/domain/: orchestration.py  report_output.py  research.py  tenant.py  tools.py
backend/app/models/domain/: report_output.py  research.py  tenant.py
backend/app/models/schemas/: orchestration.py  tool_results.py
backend/app/models/schemas/responses/: auth.py  research.py
backend/app/orchestration/: engine.py  state_machine.py  token_budget.py
backend/app/orchestration/prompts/: planner_v1.py  registry.py  synthesizer_v1.py
backend/app/repositories/: base.py  organization_repository.py  report_repository.py  user_repository.py
backend/app/security/: clerk.py
backend/app/services/: organization_service.py  research_service.py
backend/app/tools/: base.py  market_data.py  news_search.py  sentiment.py
backend/scripts/: seed_db.py
frontend/: .env.example  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: CommandPalette.tsx
frontend/components/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/components/shared/: ConfidenceBadge.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  PartialFailureBanner.tsx  SentimentBadge.tsx  SourceCard.tsx  StatusBadge.tsx  StreamReconnectBanner.tsx
frontend/hooks/: useFocusTrap.ts  useKeyboard.ts  useReducedMotion.ts  useRenderMetrics.ts
frontend/lib/: api.ts  observability.ts  utils.ts
frontend/providers/: AppProviders.tsx  index.tsx
frontend/stores/: uiStore.ts
frontend/types/: index.ts
(+49 files in other folders)
